# bhook

./: build.gradle  settings.gradle
bytehook_sample/: build.gradle
bytehook_sample/src/main/cpp/: CMakeLists.txt  android_jni.c  android_jni.h  hacker.c  hookee.c  simple.c  simple.h
bytehook_sample/src/main/cpp/include/: kdvtype.h
bytehook_sample/src/main/java/com/bytedance/android/bytehook/sample/: CalledByNative.java  MyCustomApplication.java  NativeHookee.java
thread-hook/: build.gradle
thread-hook/src/androidTest/java/com/seawalker/android/thread/hook/: ExampleInstrumentedTest.java
thread-hook/src/main/cpp/: CMakeLists.txt  hook.cpp  thread_call.cpp  thread_call.h  thread_call_monitor.cpp  thread_call_monitor.h  thread_hook.cpp  thread_hook.h
thread-hook/src/main/cpp/third/: looper.cpp  looper.h  str_util.h
thread-hook/src/main/java/com/seawalker/android/thread/hook/: NativeLib.java
thread-hook/src/test/java/com/seawalker/android/thread/hook/: ExampleUnitTest.java
